--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li><a>Linux</a></li>
         </ul>
     </section>
+    <Section><a href="/builds/WebBuild/index.html">web build</a></Section>
 
 </body>
 </html>
