Added links to downloads

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <section>
         <h2>Download</h2>
         <ul>
-            <li><a>Windows_64-bit</a></li>
-            <li><a>Windows_32-bit</a></li>
-            <li><a>Mac_Os</a></li>
-            <li><a>Linux</a></li>
+            <li><a href="/builds/Debug.Logger_win64.zip">Windows_64-bit</a></li>
+            <li><a href="/builds/Debug.Logger_win32.zip">Windows_32-bit</a></li>
+            <li><a href="/builds/Debug.Logger_macOs.zip">MacOs</a></li>
+            <li><a href="/builds/Debug.Logger_linux.zip">Linux</a></li>
         </ul>
     </section>
     <Section><a href="/builds/WebBuild/index.html">web build</a></Section>
