--- a/index.html
+++ b/index.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Debug.Logger</title>
 </head>
 <body>
     <h1>Debug.Logger</h1>
+    <section>A [buggy] 2-player Sokoban sliding block puzzle game.</section>
+
     <section>
         <h2>Download</h2>
         <ul>
-            <li><a href="/builds/Debug.Logger_win64.zip">Windows_64-bit</a></li>
-            <li><a href="/builds/Debug.Logger_win32.zip">Windows_32-bit</a></li>
-            <li><a href="/builds/Debug.Logger_macOs.zip">MacOs</a></li>
-            <li><a href="/builds/Debug.Logger_linux.zip">Linux</a></li>
+            <li><a href="./builds/Debug.Logger_win64.zip">Windows_64-bit</a></li>
+            <li><a href="./builds/Debug.Logger_win32.zip">Windows_32-bit</a></li>
+            <li><a href="./builds/Debug.Logger_macOs.zip">MacOs</a></li>
+            <li><a href="./builds/Debug.Logger_linux.zip">Linux</a></li>
         </ul>
     </section>
-    <Section><a href="/builds/WebBuild/index.html">web build</a></Section>
+    <Section><a href="./builds/WebBuild/index.html">web build</a></Section>
+
 
 </body>
 </html>
